接口静态方法of